KIK-2686 email for individual patient UI(fix buttons spacing)

--- a/app/containers/StudyPage/styles.less
+++ b/app/containers/StudyPage/styles.less
@@ -810,6 +810,8 @@
 
       .btn-default, .btn-gray-outline {
         top: 50%;
+        padding: 5px 12px !important;
+        min-width: inherit;
         position: absolute;
         transform: translate(0, -50%);
         -ms-transform: translate(0, -50%);
